--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "pferreirafabricio@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "telegram-bot/api": "^2.3"
+    },
     "autoload": {
         "psr-4": {
             "Source\\": "source/"
