--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "telegram-bot/api": "^2.3"
+        "telegram-bot/api": "^2.3",
+        "vlucas/phpdotenv": "^5.2"
     },
     "autoload": {
         "psr-4": {
